RESOLVED FIXED74822
Adoption agency iteration limits in HTML parser don't match HTML5 spec
https://bugs.webkit.org/show_bug.cgi?id=74822
Summary Adoption agency iteration limits in HTML parser don't match HTML5 spec
Adam Barth
Reported 2011-12-18 14:13:27 PST
Adoption agency iteration limits in HTML parser don't match HTML5 spec
Attachments
Patch (144.66 KB, patch)
2011-12-18 14:14 PST, Adam Barth
no flags
Adam Barth
Comment 1 2011-12-18 14:14:41 PST
Adam Barth
Comment 2 2011-12-18 14:15:26 PST
For some reason git doesn't make a readable diff to runner-expected.txt, but we now pass all the test cases in test22.dat.
Eric Seidel (no email)
Comment 3 2011-12-18 14:59:08 PST
Comment on attachment 119778 [details] Patch Well, that was easy. :)
Adam Barth
Comment 4 2011-12-18 15:00:32 PST
> Well, that was easy. :) Yes. It took a bit of digging to figure out what was happening though. :)
WebKit Review Bot
Comment 5 2011-12-18 16:29:20 PST
Comment on attachment 119778 [details] Patch Clearing flags on attachment: 119778 Committed r103193: <http://trac.webkit.org/changeset/103193>
WebKit Review Bot
Comment 6 2011-12-18 16:29:24 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7 2011-12-18 17:51:45 PST
Comment on attachment 119778 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=119778&action=review > Source/WebCore/html/parser/HTMLTreeBuilder.cpp:1529 > + // to stop from hanging the whole browser. This limit is specifying in the Typo: specified would be better than specifying here
Adam Barth
Comment 8 2011-12-18 22:32:38 PST
Reopening for typo fix.
Adam Barth
Comment 9 2011-12-18 22:39:35 PST
Note You need to log in before you can comment on or make changes to this bug.