Adoption agency iteration limits in HTML parser don't match HTML5 spec https://bugs.webkit.org/show_bug.cgi?id=74822

Reviewed by Eric Seidel.

Source/WebCore:

Previously, we were using the iteration limits from the old tree
builder.  Now we use the iteration limits from the HTML5 specification.

Tests: html5lib/runner.html

* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::callTheAdoptionAgency):

LayoutTests:

Show test progression.

* fast/parser/residual-style-dom-expected.txt:
* html5lib/runner-expected.txt:
* platform/chromium/html5lib/runner-expected.txt:


Canonical link: https://commits.webkit.org/91557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103193 268f45cc-cd09-0410-ab3c-d52691b4dbfc